     * The protocol list in --ssl-protocols or corresponding database column
       now supports specifying simple protocol ranges like:
         - "TLSv1-TLSv1.2" to enable all protocols between TLSv1 and TLSv1.2.
         - "TLSv1.2+" to enable protocol TLSv1.2 and later.
       The value must be a list of protocols or exactly one protocol range.
     * ovs-pki now generates 3072-bit keys by default.
   - Userspace datapath:
     * The default zone limit, if set, is now inherited by any zone
       that does not have a specific value defined, rather than being
       treated as a global value, aligning the behavior with that of
       the kernel datapath.
   - Linux TC offload:
     * Add support for matching tunnel flags if the kernel supports it.
     * Add support for the "Don't Fragment" (DF) flag in the encap action,
       if the kernel supports it.
   - Python:
     * Added tool called "ovs-flowviz" capable of parsing OpenFlow
       and datapath flow dumps and displaying them in several different
       formats.
     * Dropped support for Python < 3.7.
   - DPDK:
     * OVS validated with DPDK 23.11.2.
     * Add hardware offload support for matching ICMPv6 protocol
       (experimental).
   - Tunnels:
     * LISP and STT tunnel port types are deprecated and will be removed in
       the next release.


v3.4.0 - 15 Aug 2024
--------------------
   - Option '--mlockall' now only locks memory pages on fault, if possible.
     This also makes it compatible with vHost Post-copy Live Migration.
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
     * 'dpif/show' and 'list-commands' now support output in JSON format.
     * Added 'ofproto/detrace' command that outputs the set of OpenFlow rules
       and groups that contributed to the creation of a specific datapath flow.
   - ovs-vsctl: