@@ -89,3 +89,10 @@ stream_ssl_set_ciphers(const char *arg OVS_UNUSED)
     /* Ignore this option since it seems harmless to set SSL/TLS ciphers if
      * SSL/TLS won't be used. */
 }
+
+void
+stream_ssl_set_ciphersuites(const char *arg OVS_UNUSED)
+{
+    /* Ignore this option since it seems harmless to set TLS ciphersuites if
+     * SSL/TLS won't be used. */
+}
